<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#15112B"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#F48599"
            android:theme="@style/AppTheme.Toolbar"
            app:title="FitTrack"
            app:titleTextColor="#FFFFFF"
            app:titleTextAppearance="@font/architects_daughter"/>

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@mipmap/logo_app"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manual_de_usuario"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:paddingBottom="16dp"
                android:fontFamily="@font/architects_daughter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_home_1"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:paddingBottom="16dp"
                android:fontFamily="@font/architects_daughter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_home_2"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:paddingBottom="16dp"
                android:fontFamily="@font/architects_daughter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_home_3"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:paddingBottom="16dp"
                android:fontFamily="@font/architects_daughter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nota"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:paddingBottom="16dp"
                android:fontFamily="@font/architects_daughter"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnVolverHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#F48599"
        android:fontFamily="@font/architects_daughter"
        android:padding="12dp"
        android:text="@string/volver"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />
</LinearLayout>