<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#15112B"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#F48599"
            android:theme="@style/AppTheme.Toolbar"
            app:title="FitTrack"
            app:titleTextColor="#FFFFFF"
            app:titleTextAppearance="@font/architects_daughter"/>

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@mipmap/logo_app"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinnerTipoActividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#F48599"
            android:prompt="@string/prompt_tipo_actividad"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextDistancia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#F48599"
            android:fontFamily="@font/architects_daughter"
            android:hint="@string/distancia_km"
            android:inputType="numberDecimal"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#F48599"
            android:fontFamily="@font/architects_daughter"
            android:hint="@string/tiempo"
            android:inputType="datetime"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextVelocidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#F48599"
            android:fontFamily="@font/architects_daughter"
            android:hint="@string/velocidad_maxima"
            android:inputType="numberDecimal"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:visibility="visible"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spinnerTipoAgua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progreso"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/architects_daughter"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="#F48599"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="50" />

    <Button
        android:id="@+id/btnGuardarActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F48599"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/guardar_actividad"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#F48599"
        android:fontFamily="@font/architects_daughter"
        android:padding="12dp"
        android:text="@string/volver"
        android:textColor="@android:color/white"
        tools:ignore="TextContrastCheck" />
</LinearLayout>